Fix double scroll bar on search

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -273,7 +273,7 @@ mark {
   overflow-wrap: break-word;
   /* overflow-x: scroll;
   height: calc(100vh - 110px); */
-  padding-bottom: 5px;
+  margin-bottom: 5px;
   /* display: flex;
   flex-direction: column-reverse; */
 }
